--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: objective-c
+language: swift
 
 branches:
   only:
@@ -6,8 +6,7 @@ branches:
 
 xcode_project: SwiftyOAuth.xcodeproj
 xcode_scheme: SwiftyOAuthTests
-osx_image: xcode8
-xcode_sdk: iphonesimulator10.0
+osx_image: xcode11.2
 
 script:
-  - xcodebuild test -project SwiftyOAuth.xcodeproj -scheme SwiftyOAuthTests -destination "platform=iOS Simulator,name=iPhone 6s"
+  - xcodebuild test -project SwiftyOAuth.xcodeproj -scheme SwiftyOAuthTests -destination "platform=iOS Simulator,name=iPhone 11"
